2023-02-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/\
	some_escapes_accept_newline_delimiters.sh: Weaken regexes in two
	test cases to accommodate excessive output from macOS's 'od'
	command.  Resolves test failure seen on macOS.
	* HACKING: Add section "Writing Tests" and document the above
	since this is the second time I've cracked my shin on this.

2023-02-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/tests/basic-fonts-present.sh: Skip test if 'gs'
	command not available.  The test is to ensure that gropdf will
	produce sound documents using the base fonts from PostScript,
	but since gropdf requires Ghostscript to do this (as noted in
	our "./configure" messages), it makes no sense to validate font
	availability if the program is absent.  Resolves test failure
	seen on macOS with minimal dependencies installed.

2023-02-12  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/groff.texi (Manipulating Filling and Adjustment): Say more
	about the consequences of a break.

	Fixes <https://savannah.gnu.org/bugs/?63777>.  Thanks to Dave
	Kemper for the report.

2023-02-12  G. Branden Robinson <g.branden.robinson@gmail.com>

	[docs]: Re-re-christen 'ESCAPE_AMPERSAND' ('\&').  Now call it a
	{non-transparent} "dummy character".  Also rechristen
	'ESCAPE_RIGHT_PARENTHESIS', ('\)') as the "transparent dummy
	character"; it has no impact on sentence-ending detection.

	* doc/groff.texi:
	* doc/meref.me.in:
	* man/groff.7.man:
	* man/groff_diff.7.man:
	* man/roff.7.man:
	* src/preproc/refer/refer.1.man:
	* tmac/groff_man.7.man.in: Do it.

	Fixes <https://savannah.gnu.org/bugs/?62816>.  Thanks to Dave
	Kemper to the report and to the groff mailing list for the
	vigorous discussion.  I don't expect my solution to please
	everyone.

2023-02-11  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/an.tmac: Add internal register `an*MR-URL-format` to